# parallel-advection

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  main.cpp  reduction.cpp  setenv.sh  setenv_nvhpc.sh
.github/workflows/: publish-containers.yaml  run-build-and-test.yaml
benchmark/: CMakeLists.txt  README.md  TableBenchmarkVersions.ods  TableBenchmarkVersions.xlsx  advection-bench.cpp  bench_config.h  bench_config.hpp  bench_params.py  bench_stream.cpp  bench_utils.h  bench_utils.hpp  bkm_bench.cpp  conv1d-bench.cpp  conv1d_bench.cpp  hybrid_mem_bench.cpp  launch.sh  launch_ncu_profiling.sh  main_bench.cpp  orchestrate.py  paper-bench.cpp  print_sycl_infos.cpp  read_csv_paper.ipynb  read_pandas_csv.ipynb  run_bench.cpp  stream_bench.cpp  submission_bench.cpp  utils.py  visualize.ipynb
benchmark/__old/: print_sycl_infos.cpp  stream_bench.cpp  submission_bench.cpp
benchmark/script/: __run  advection.ini  edit_ini_file.py  parse  run  summarize.py
benchmark/script/ncu-ini/: advection.ini
cmake/: add_executable.cmake  initBuildType.cmake
config/: AdvectionParams.cpp  AdvectionParams.h  CMakeLists.txt  ConfigMap.cpp  ConfigMap.h
containers/: README.md
containers/dpcpp-nvidia-589824d/: Dockerfile
containers/dpcpp2023.2.0/: Dockerfile  spack.yaml
containers/hipsycl-full/: Dockerfile
containers/hipsycl0.9.4-cuda11.8/: Dockerfile  spack.yaml
containers/hipsycl0.9.4-rocm5.3.0/: Dockerfile  compile-hipsycl.sh  spack.yaml
containers/sycl-complete/: Dockerfile
containers/sycl-complete-cuda11.8-rocm5.5.1/: Dockerfile  download.txt
containers/sycl-full/: Dockerfile
containers/sycl-full/scripts/: install_cuda11.0.2.sh  install_llvm15.sh  install_rocm.5.4.3.sh  setenv.sh
diag/: README.md  amd-bug-correction.sh  conv1d.py  conv1d_tensorflow.py  launch.sh  launch_STREAM.sh  launch_benchmarks.sh  read_benchmark.ipynb  read_ncu_profile.ipynb  utils.py
diag/__old/: bench_params.py  launch_roc_profiling.sh  orchestrate.py  read_csv_paper.ipynb  test_clickable_plot.py  utils.py  vizualize.ipynb
diag/__old/script/: advection.ini  edit_ini_file.py  parse.sh
diag/__old/script/ncu-ini/: advection.ini
diag/benchmark_diags/: utils.py
diag/script/: run.sh  run_advection.sh
docker/: Dockerfile
jlse/: run-benchmark.sh  setenv-acpp.sh  setenv-dpcpp.sh
src/: CMakeLists.txt  advec_main.cpp  advection.cpp  advection.ini  conv1d.cpp  conv1d.ini  conv1d_main.cpp  main.cpp  types.h  types.hpp  utils.h
src/advection/: CMakeLists.txt  advection_impl.cpp  advection_impl.hpp  advector_impl.cpp  advector_impl.h  advector_impl.hpp  i_advection.hpp
src/config/: AdvectionParams.cpp  AdvectionParams.h  AdvectionParams.hpp  CMakeLists.txt  ConfigMap.cpp  ConfigMap.h  Conv1dParams.cpp  Conv1dParams.hpp  InitParams.cpp  InitParams.h
src/core/: AdaptiveWg.hpp  AdvectionSolver.h  AdvectionSolver.hpp  BasicRange.hpp  BasicRangeAdvector.cpp  BasicRangeAdvector.h  CMakeLists.txt  ConvSolver.h  ConvSolver.hpp  IAdvector.h  IAdvectorX.h  IAdvectorX.hpp  NDRange.hpp  NDRangeAdvector.cpp  NDRangeAdvector.h  SequentialAdvector.cpp  SequentialAdvector.h  Solver.h  advector_impl.cpp  advector_impl.h  advectors.h  advectors.hpp  bkma.hpp  bkma_run.hpp  bkma_tools.hpp  vx_advectors.h  x_advectors.h
src/core/advectorVx/: CMakeLists.txt  IAdvectorVx.h
src/core/advectorVx/impl/: Hierarchical.cpp
src/core/advectorX/: CMakeLists.txt  IAdvectorX.h
src/core/advectorX/impl/: BasicRange1D.cpp  BasicRange2D.cpp  BasicRange3D.cpp  FixedMemoryFootprint.cpp  Hierarchical.cpp  HierarchicalAlloca.cpp  NDRange.cpp  Scoped.cpp  Sequential.cpp  Sequential_old.cpp
src/core/bkma/: AdaptiveWg.hpp  MemorySpace.hpp  NDRange.hpp
src/core/celerity/: CMakeLists.txt  DistrAdvector.h
src/core/experiments/: BasicRange1D.cpp  Exp6.cpp  FakeAdvector.cpp  FixedMemoryFootprint.cpp  ReducedPrecision.cpp  SeqTwoDimWG.cpp  StreamY.cpp
src/core/experiments/__old/: AdaptiveWg.cpp  advectors.hpp  bkma.hpp
src/core/impl/: AdaptiveWg.cpp  Alg5.cpp  BasicRange.cpp  BasicRange1D.cpp  BasicRange2D.cpp  CudaLDG.cpp  Exp1.cpp  Exp2.cpp  Exp3.cpp  Exp4.cpp  Exp5.cpp  Exp6.cpp  Exp7.cpp  FakeAdvector.cpp  FixedMemoryFootprint.cpp  FullyLocal.cpp  Hierarchical.cpp  HierarchicalAlloca.cpp  HierarchicalMallocDevice.cpp  HybridMem.cpp  LargeMalloc.cpp  LargeNy.cpp  LargeNyNz.cpp  MemSafe.cpp  MultiDevice.cpp  NDRange.cpp  ReducedPrecision.cpp  ReverseIndexes.cpp  Scoped.cpp  SeqTwoDimWG.cpp  Sequential.cpp  Sequential_old.cpp  StraddledMalloc.cpp  StreamY.cpp  TwoDimWG.cpp  bkma.h  bkma.hpp  distribute_batchs.h  submit_global_kernels.h  submit_kernels.h  (+1 more)
src/core/impl/experiments/: AdaptiveWg.cpp  BasicRange1D.cpp  CudaLDG.cpp  Exp1_StraddledBuffer.cpp  FakeAdvector.cpp  FixedMemoryFootprint.cpp  FullyGlobal.cpp  HybridMem.cpp  ReducedPrecision.cpp  StraddledMalloc.cpp
src/kokkos/: CMakeLists.txt  kokkos_shortcut.hpp  main.cpp
src/kokkos/core/: CMakeLists.txt  IAdvector.h  vx_advectors.h  x_advectors.h
src/kokkos/core/advectorVx/: CMakeLists.txt  IAdvectorVx.h
src/kokkos/core/advectorVx/impl/: MDRange.cpp
src/kokkos/core/advectorX/: CMakeLists.txt  IAdvectorX.h
src/kokkos/core/advectorX/impl/: MDRange.cpp  ThreadTeam.cpp
src/kokkos/tools/: CMakeLists.txt  init.h  io.h  validation.h
src/solvers/: ISolver.hpp
src/sycl/: CMakeLists.txt  main.cpp
src/sycl/core/: CMakeLists.txt  IAdvector.h  vx_advectors.h
src/sycl/core/advectorVx/: CMakeLists.txt  IAdvectorVx.h
src/sycl/core/advectorVx/impl/: Hierarchical.cpp
src/sycl/core/advectorX/: CMakeLists.txt
src/sycl/core/advectorX/impl/: BasicRange1D.cpp  HierarchicalAlloca.cpp  Scoped.cpp  Sequential.cpp
src/sycl/tools/: CMakeLists.txt  init.h  io.h  validation.h
src/tools/: CMakeLists.txt  impl_selector.hpp  init.cpp  init.h  init.hpp  io.h  unique_ref.h  unique_ref.hpp  validation.cpp  validation.h  validation.hpp
tests/: CMakeLists.txt  impl_unittests.cpp  init_unittests.cpp  validation_unittests.cpp
